--- a/templates/index.html
+++ b/templates/index.html
@@ -250,7 +250,7 @@
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="static/img/portfolio/PersonalSite.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Personal Site"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/DmitryPilyuk/MyProfileSite" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
