--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,14 @@
    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(91208821, "init", {
+   ym(91214746, "init", {
         clickmap:true,
         trackLinks:true,
         accurateTrackBounce:true,
         webvisor:true
    });
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/91208821" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <noscript><div><img src="https://mc.yandex.ru/watch/91214746" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
 
   <!-- Favicons -->
@@ -78,7 +78,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center">
   <div class="container" data-aos="zoom-in" data-aos-delay="100">
     <h1>Дмитрий Пилюк</h1>
-    <p><span class="typed" data-typed-items="Студент второго курса, Начинаюший разработчик"></span></p>
+    <p><span class="typed" data-typed-items="Студент второго курса, Начинающий разработчик"></span></p>
     <div class="social-links">
       <a href="https://t.me/DmrtPlk" class="telegram"><i class="bx bxl-telegram"></i></a>
       <a href="https://instagram.com/iamdmitriipiliuk" class="instagram"><i class="bx bxl-instagram"></i></a>
