--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <meta name="yandex-verification" content="d00c0ac81a120dd2" />
+
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
