--- a/templates/index.html
+++ b/templates/index.html
@@ -215,10 +215,10 @@
           <div class="resume-item">
             <h4>Среднее общее образование</h4>
             <h5>2014 - 2021</h5>
-            <p><em>Муниципальное Автомное Общеобразовательное учереждение <br> "Лицей №17" г. Северодвинска</em></p>
+            <p><em>Муниципальное Автономное Общеобразовательное учереждение <br> "Лицей №17" г. Северодвинска</em></p>
           </div>
           <div class="resume-item">
-            <h4>Бакалавртат "Программная инженерия"</h4>
+            <h4>Бакалавриат "Программная инженерия"</h4>
             <h5>2021 - 2025</h5>
             <p><em>Санкт-Петербургский Государственный Университет <br> Метематико механический факультет</em></p>
           </div>
