--- a/templates/index.html
+++ b/templates/index.html
@@ -86,10 +86,10 @@
     <h1>Дмитрий Пилюк</h1>
     <p><span class="typed" data-typed-items="Студент второго курса, Начинающий разработчик"></span></p>
     <div class="social-links">
-      <a href="https://t.me/DmrtPlk" class="telegram"><i class="bx bxl-telegram"></i></a>
-      <a href="https://instagram.com/iamdmitriipiliuk" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="https://vk.com/id157288871" class="vkontakte"><i class="bx bxl-vk"></i></a>
-      <a href="https://github.com/DmitryPilyuk" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://t.me/DmrtPlk" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
+      <a href="https://instagram.com/iamdmitriipiliuk" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="https://vk.com/id157288871" target="_blank" class="vkontakte"><i class="bx bxl-vk"></i></a>
+      <a href="https://github.com/DmitryPilyuk" target="_blank" class="github"><i class="bx bxl-github"></i></a>
     </div>
   </div>
 </section><!-- End Hero -->
@@ -283,19 +283,19 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Дополнительные курсы</h3>
           <div class="resume-item">
-            <a href="/static/img/Methods.jpg" class="portfolio-lightbox"><h4>Алгоритмы: теория и практика. Методы</h4>
+            <a href="/static/img/Methods.jpg" class="portfolio-lightbox"><h4><u>Алгоритмы: теория и практика. Методы</u></h4>
             </a>
             <h5>2022</h5>
             <p><em>Stepik, Computer Science centre</em></p>
           </div>
           <div class="resume-item">
-            <a href="/static/img/Data.jpg" class="portfolio-lightbox"><h4>Алгоритмы: теория и практика. Структуры
-              данных</h4></a>
+            <a href="/static/img/Data.jpg" class="portfolio-lightbox"><h4><u>Алгоритмы: теория и практика. Структуры
+              данных</u></h4></a>
             <h5>2022</h5>
             <p><em>Stepik, Computer Science centre</em></p>
           </div>
           <div class="resume-item">
-            <a href="/static/img/Html.jpg" class="portfolio-lightbox"><h4>Веб-разработка для начинающих: HTML и CSS</h4>
+            <a href="/static/img/Html.jpg" class="portfolio-lightbox"><h4><u>Веб-разработка для начинающих: HTML и CSS</u></h4>
             </a>
             <h5>2022</h5>
             <p><em>Stepik, ITC</em></p>
@@ -317,7 +317,6 @@
 
       <div class="section-title">
         <h2>Портфолио</h2>
-        <p>Здесь будут располагаться будущие проекты.</p>
       </div>
 
 
@@ -332,7 +331,7 @@
               <div class="portfolio-links">
                 <a href="static/img/portfolio/PersonalSite.png" data-gallery="portfolioGallery"
                    class="portfolio-lightbox" title="Personal Site"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/DmitryPilyuk/MyProfileSite"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/DmitryPilyuk/MyProfileSite" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -343,11 +342,11 @@
             <img src="static/img/portfolio/Embox_Logo.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Embox</h4>
-              <p>Embox</p>
+              <p>Занимаюсь расширением криптографических возможнотей в ОСРВ Embox</p>
               <div class="portfolio-links">
                 <a href="static/img/portfolio/Embox_Logo.png" data-gallery="portfolioGallery"
-                   class="portfolio-lightbox" title="Embox"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/DmitryPilyuk/embox"><i class="bx bx-link"></i></a>
+                   class="portfolio-lightbox" title="Занимаюсь расширением криптографических возможнотей в ОСРВ Embox"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/DmitryPilyuk/embox" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
