Change color of hrefs

--- a/templates/index.html
+++ b/templates/index.html
@@ -282,20 +282,20 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Дополнительные курсы</h3>
-          <div class="resume-item">
-            <a href="/static/img/Methods.jpg" class="portfolio-lightbox"><h4><u>Алгоритмы: теория и практика. Методы</u></h4>
+          <div class="resume-item-href">
+            <a href="/static/img/Methods.jpg" class="portfolio-lightbox"><h4>Алгоритмы: теория и практика. Методы</h4>
             </a>
             <h5>2022</h5>
             <p><em>Stepik, Computer Science centre</em></p>
           </div>
-          <div class="resume-item">
-            <a href="/static/img/Data.jpg" class="portfolio-lightbox"><h4><u>Алгоритмы: теория и практика. Структуры
-              данных</u></h4></a>
+          <div class="resume-item-href">
+            <a href="/static/img/Data.jpg" class="portfolio-lightbox"><h4>Алгоритмы: теория и практика. Структуры
+              данных</h4></a>
             <h5>2022</h5>
             <p><em>Stepik, Computer Science centre</em></p>
           </div>
-          <div class="resume-item">
-            <a href="/static/img/Html.jpg" class="portfolio-lightbox"><h4><u>Веб-разработка для начинающих: HTML и CSS</u></h4>
+          <div class="resume-item-href">
+            <a href="/static/img/Html.jpg" class="portfolio-lightbox"><h4>Веб-разработка для начинающих: HTML и CSS</h4>
             </a>
             <h5>2022</h5>
             <p><em>Stepik, ITC</em></p>
