--- a/static/css/style.css
+++ b/static/css/style.css
@@ -545,7 +545,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #45505b;
   margin-bottom: 10px;
 }
 
@@ -566,11 +566,61 @@ section {
   padding-bottom: 10px;
 }
 
-.resume .resume-item:last-child {
+.resume .resume-item:last-child{
   padding-bottom: 0;
 }
 
 .resume .resume-item::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 0;
+  background: #fff;
+  border: 2px solid #0563bb;
+}
+
+.resume .resume-item-href {
+  padding: 0 0 20px 20px;
+  margin-top: -2px;
+  border-left: 2px solid #0563bb;
+  position: relative;
+}
+
+.resume .resume-item-href h4 {
+  line-height: 18px;
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  color: #0563bb;
+  margin-bottom: 10px;
+}
+
+.resume .resume-item-href h5 {
+  font-size: 16px;
+  background: #f7f8f9;
+  padding: 5px 15px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.resume .resume-item-href ul {
+  padding-left: 20px;
+}
+
+.resume .resume-item-href ul li {
+  padding-bottom: 10px;
+}
+
+.resume .resume-item-href:last-child{
+  padding-bottom: 0;
+}
+
+.resume .resume-item-href::before {
   content: "";
   position: absolute;
   width: 16px;
