--- a/templates/index.html
+++ b/templates/index.html
@@ -311,53 +311,35 @@
     </div>
   </section><!-- End Resume Section -->
 
-  <!-- ======= Portfolio Section ======= -->
-  <section id="portfolio" class="portfolio section-bg">
-    <div class="container" data-aos="fade-up">
+  <!-- ======= Services Section ======= -->
+    <section id="portfolio" class="services">
+      <div class="container" data-aos="fade-up">
 
-      <div class="section-title">
+        <div class="section-title">
         <h2>Портфолио</h2>
-      </div>
-
-
-      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="static/img/portfolio/PersonalSite.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>MyProfileSite</h4>
-              <p>Personal site</p>
-              <div class="portfolio-links">
-                <a href="static/img/portfolio/PersonalSite.png" data-gallery="portfolioGallery"
-                   class="portfolio-lightbox" title="Personal Site"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/DmitryPilyuk/MyProfileSite" target="_blank"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="static/img/portfolio/Embox_Logo.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Embox</h4>
-              <p>Занимаюсь расширением криптографических возможнотей в ОСРВ Embox</p>
-              <div class="portfolio-links">
-                <a href="static/img/portfolio/Embox_Logo.png" data-gallery="portfolioGallery"
-                   class="portfolio-lightbox" title="Занимаюсь расширением криптографических возможнотей в ОСРВ Embox"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/DmitryPilyuk/embox" target="_blank"><i class="bx bx-link"></i></a>
-              </div>
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-orange ">
+              <img src="static/img/portfolio/PersonalSite.png" class="img-fluid" alt="">
+              <h4><a href="https://github.com/DmitryPilyuk/MyProfileSite" target="_blank">MyProfileSite</a></h4>
+              <p>GitHub репозиторий этого сайта.</p>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-orange ">
+              <img src="static/img/portfolio/Embox_Logo.png" class="img-fluid" alt="">
+              <h4><a href="https://github.com/DmitryPilyuk/embox" target="_blank">Embox</a></h4>
+              <p>Занимаюсь расширением криптографических возможностей в ОСРВ Embox.</p>
+            </div>
+          </div>
+
         </div>
 
-
-
-
       </div>
-    </div>
-  </section><!-- End Portfolio Section -->
+    </section><!-- End Services Section -->
 
   <!-- ======= Testimonials Section ======= -->
   <section id="testimonials" class="testimonials section-bg">
