--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
               </svg>
               <i class="devicon-ocaml-plain colored"></i>
             </div>
-            <h4><a href="">OCaml</a></h4>
+            <h4>OCaml</h4>
           </div>
         </div>
 
@@ -224,7 +224,7 @@
               </svg>
               <i class="devicon-java-plain colored"></i>
             </div>
-            <h4><a href="">Java</a></h4>
+            <h4>Java</h4>
           </div>
         </div>
 
@@ -237,7 +237,7 @@
               </svg>
               <i class="devicon-html5-plain colored"></i>
             </div>
-            <h4><a href="">Html</a></h4>
+            <h4>Html</h4>
           </div>
         </div>
 
@@ -250,7 +250,7 @@
               </svg>
               <i class="devicon-css3-plain colored"></i>
             </div>
-            <h4><a href="">CSS</a></h4>
+            <h4>CSS</h4>
           </div>
         </div>
       </div>
